--- a/CMT/.classpath
+++ b/CMT/.classpath
@@ -14,5 +14,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="D:/Programmazione/Java/lib/mysql-connector.jar"/>
+	<classpathentry kind="lib" path="D:/Programmazione/Java/lib/json-20200518.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
