--- a/CMT/WebContent/WEB-INF/web.xml
+++ b/CMT/WebContent/WEB-INF/web.xml
@@ -3,4 +3,10 @@
 	<welcome-file-list>
 		<welcome-file>homepage.jsp</welcome-file>
 	</welcome-file-list>
+	<session-config>
+		<cookie-config>
+			<http-only>true</http-only>
+			<secure>true</secure>
+		</cookie-config>
+	</session-config> 
 </web-app>
